--- a/07_projects/01_colorChanger/style.css
+++ b/07_projects/01_colorChanger/style.css
@@ -2,44 +2,80 @@
     width: 100%;
     box-sizing: border-box;
   }
-  html,
-  body {
+html,
+body {
     width: 100%;
   }
-  nav {
-    width: 100%;
-    height: 70px;
-    background: gray;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 0.7rem;
-  }
-  nav a {
-    text-decoration: none;
-    color: black;
-    font-weight: 600;
-    padding: 1.2vw;
-    background: white;
-    border-radius: 0.6rem;
-    cursor: pointer;
-  }
-  
-  .canvas {
-    width: 60%;
-    height: calc(100% - 70px);
-    background: lightblue;
-    margin: auto;
-    text-align: center;
-  }
-  .canvas .button {
-    width: 50px;
-    height: 50px;
-    background: red;
+nav {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-  }
-  
+    padding: 0.5rem;
+    gap: 0.5rem;
+    border-bottom: solid 1px #aaa;
+    background-color: #eee;
+}
+
+nav a {
+    display: inline-block;
+    min-width: 9rem;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
+    border: solid 1px #aaa;
+    text-align: center;
+    text-decoration: none;
+    color: #555;
+    width: 0;
+}
+
+nav a[aria-current='page'] {
+    color: #000;
+    background-color: #d4d4d4;
+}
+.canvas {
+    width: 80vw;
+    /* height: calc(100% - 70px); */
+    background: lightblue;
+    margin: auto;
+    padding: 1.2vw;
+}
+.canvas h1{
+  text-align: center;
+}
+.canvas .buttonBox{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.canvas .button {
+  width: 10vw;
+  height: 10vw;
+  background: red;
+  display: inline-block;
+  margin: 2vw;
+  cursor: pointer;
+  border: 2px solid #000;
+}
+.canvas #red{
+  background: red;
+}
+.canvas #white{
+  background: white;
+}
+.canvas #gray{
+  background: gray;
+}
+.canvas #green{
+  background: green;
+}
+.canvas .button:hover{
+  width: 9.5vw;
+  height: 9.5vw;
+}
+main h2{
+  text-align: center;
+  width: 79vw;
+  font-size: 3vw;
+}
