4th project solution

--- a/07_projects/styles.css
+++ b/07_projects/styles.css
@@ -6,8 +6,8 @@
 body {
     margin: 0;
     font-family: system-ui, sans-serif;
-    color: black;
-    background-color: white;
+    color: #fff;
+    background-color: black;
     font-family: 'Ubuntu', sans-serif;
 }
 
