--- a/07_projects/04_GuessTheNumber/style.css
+++ b/07_projects/04_GuessTheNumber/style.css
@@ -1,38 +1,92 @@
-*{
-    width: 100%;
+html {
+    font-family: sans-serif;
+  }
+  
+  body {
+    width: 300px;
+    max-width: 750px;
+    min-width: 480px;
+    margin: 0 auto;
+    background-color: #212121;
+  }
+  
+  .lastResult {
+    color: white;
+    padding: 7px;
+  }
+  
+  .guesses {
+    color: white;
+    padding: 7px;
+  }
+  
+  button {
+    background-color: #141414;
+    color: #fff;
+    width: 250px;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 30px;
+    border-style: none;
+    margin-top: 30px;
+    /* margin-left: 50px; */
+  }
+  
+  #subt {
+    background-color: #161616;
+    color: #ffffff;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 20px;
+    border-style: none;
+    margin-top: 50px;
+    /* margin-left: 75px; */
+  }
+  
+  #guessField {
+    color: #000;
+    width: 250px;
+    height: 50px;
+    font-size: 30px;
+    border-style: none;
+    margin-top: 25px;
+  
+    /* margin-left: 50px; */
+    border: 5px solid #6c6d6d;
+    text-align: center;
+  }
+  
+  #guess {
+    font-size: 55px;
+    /* margin-left: 90px; */
+    margin-top: 120px;
+    color: #fff;
+  }
+  
+  .guesses {
+    background-color: #7a7a7a;
+  }
+  
+  #wrapper {
     box-sizing: border-box;
-
-}
-#wrapper{
-    width: 90%;
-    margin: 2vw auto;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-#wrapper h1{
     text-align: center;
-}
-#wrapper p{
-    font-size: 2vw;
-    font-weight: 700;
+    width: 450px;
+    height: 550px;
+    background-color: #474747;
+    color: #fff;
+    font-size: 25px;
+  }
+  
+  h1 {
+    background-color: #161616;
+  
+    color: #fff;
     text-align: center;
-}
-#wrapper form{
-    width: 100%;
+  }
+  
+  p {
+    font-size: 16px;
     text-align: center;
-}
-#wrapper form #guess{
-    font-size: 2vw;
-    font-weight: 700;
-}
-#wrapper form input{
-    width: 20vw;
-    border: none;
-    padding: .7vw;
-}
-#wrapper form #subt{
-    cursor: pointer;
-}
+  }
+  
